--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Covid19Tracker</string>
+    <string name="pick_country">Pick Country</string>
 </resources>
